<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="305dp"
        android:orientation="vertical">


        <View
            android:id="@+id/bottom_cicleview"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bottom_circle_shape" />

        <View
            android:id="@+id/middle_cicleview"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/middle_circle_shape" />

        <TextView
            android:id="@+id/score_count_view"
            android:layout_width="174dp"
            android:layout_height="174dp"
            android:layout_centerInParent="true"
            android:background="@drawable/top_circle_shape"
            android:gravity="center"
            android:text="100"
            android:textSize="65sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <com.cydroid.softmanager.view.ScoreCountView
            android:id="@+id/score_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/top_circle_shape"
            app:hint_color="@color/text_deeply_black_color"
            app:hint_size="16dp"
            app:number_color="@color/text_deeply_black_color"
            app:number_hint_margin="4dp"
            app:number_size="56dp"
            app:size="150dp"
            app:unit="@string/score_unit_text"
            app:unit_color="@color/text_deeply_black_color"
            app:unit_size="12dp" />

        <com.cydroid.softmanager.view.AnimBallView
            android:id="@+id/anim_ball_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <TextView
            android:id="@+id/scan_system_btn"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp"
            android:background="@drawable/optimize_shape"
            android:gravity="center"
            android:text="@string/one_optimise"
            android:textColor="#ff0277f2"
            android:textSize="20sp" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rub_cleaner_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:drawableTop="@drawable/cache_cleaner_new"
                android:drawablePadding="6dp"
                android:gravity="center_horizontal"
                android:text="@string/rubcleaner"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/boot_speed_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:drawableTop="@drawable/boot_speed_new"
                android:drawablePadding="6dp"
                android:gravity="center_horizontal"
                android:text="@string/bootspeed"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/power_manager_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_toEndOf="@id/boot_speed_btn"
                android:layout_toRightOf="@id/boot_speed_btn"
                android:layout_weight="1"
                android:drawableTop="@drawable/power_manager_new"
                android:drawablePadding="6dp"
                android:gravity="center_horizontal"
                android:text="@string/powermanager"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/traffic_monitor_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/traffic_monitor_new"
                android:drawablePadding="6dp"
                android:gravity="center_horizontal"
                android:text="@string/trfficmonitor"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/app_manager_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/app_manager_new"
                android:drawablePadding="6dp"
                android:gravity="center_horizontal"
                android:text="@string/softmanager"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/setting_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/set"
                android:drawablePadding="6dp"
                android:gravity="center_horizontal"
                android:text="@string/setting"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>