<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_white"
    tools:context=".optimise.OptimiseActivity">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@color/white"
        android:orientation="vertical">

        <com.cydroid.softmanager.view.AnimBallView
            android:id="@+id/anim_ball_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:ball_color="@color/anim_ball_color" />

        <View
            android:id="@+id/bottom_cicleview"
            android:layout_width="205dp"
            android:layout_height="205dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:background="@drawable/bottom_circle_shape" />

        <View
            android:id="@+id/middle_cicleview"
            android:layout_width="165dp"
            android:layout_height="165dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:background="@drawable/middle_circle_shape" />

        <TextView
            android:id="@+id/score_count_view"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="52dp"
            android:background="@drawable/top_circle_shape"
            android:gravity="center"
            android:visibility="gone"
            android:text="100"
            android:textSize="45sp"
            android:textStyle="bold" />
        <com.cydroid.softmanager.view.ScoreCountView
            android:id="@+id/score_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/top_circle_shape"
            app:hint_color="@color/text_deeply_black_color"
            app:hint_size="16dp"
            app:number_color="@color/text_deeply_black_color"
            app:number_hint_margin="4dp"
            app:number_size="56dp"
            app:size="150dp"
            app:unit="@string/score_unit_text"
            app:unit_color="@color/text_deeply_black_color"
            app:unit_size="12dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/top"
        android:id="@+id/secondtop"
        android:background="@color/white">

        <TextView
            android:id="@+id/optimising"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="18dp"
            android:gravity="center"
            android:text="@string/optimising"
            android:textColor="@color/item_black"
            android:textSize="17sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/secondtop"
        android:layout_marginTop="10dp"
        android:background="@color/white">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/optimising_item_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/optimise_btn"
            android:layout_marginBottom="50dp"
            android:scrollbars="vertical" />


        <Button
            android:id="@+id/optimise_btn"
            android:layout_width="262dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:background="@drawable/one_clean_enable"
            android:gravity="center"
            android:text="@string/one_clean"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </RelativeLayout>

</LinearLayout>